syntax = "proto3";

option go_package = "github.com/eolinker/eosc/service";
package service;
import "message.proto";

message WorkerHelloRequest{
  string hello = 1;
}

message WorkerDeleteRequest  {
  string id = 1;
}

message WorkerSetRequest{
  string id = 1;
  string profession = 2;
  string name = 3;
  string driver = 4;
  bytes  body = 5;
}

enum WorkerStatusCode{
  SUCCESS = 0;
  FAIL = 1;
  SKILL = 2;
}


message WorkerResponse{
  WorkerStatusCode status = 1;
  string message = 2;
}


message ResetRequest{
  ExtendersSetting extenders = 1;
  ProfessionConfigs professions = 2;
  WorkerConfigs workers = 3;
}
message StatusRequest{

}
message StatusResponse{

}

service WorkerService{
  rpc deleteCheck(WorkerDeleteRequest)returns(WorkerResponse){};
  rpc setCheck(WorkerSetRequest)returns(WorkerResponse){};

  rpc delete(WorkerDeleteRequest)returns(WorkerResponse){};
  rpc set(WorkerSetRequest)returns(WorkerResponse){};

  rpc ping(WorkerHelloRequest)returns(WorkerResponse){};

  rpc reset(ResetRequest) returns(WorkerResponse){};
  rpc status(StatusRequest)returns(StatusResponse){}
}
